--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^2.7.3",
     "daisyui": "^3.1.7",
     "dayjs": "^1.11.9",
+    "qrcode": "^1.5.4",
     "sharp": "^0.32.1"
   },
   "devDependencies": {
