--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,16 +14,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout del repository
         uses: actions/checkout@v3
-      - name: Install, build, and upload your site
+      - name: Installa, costruisci e carica il sito
         uses: withastro/action@v0
-        # Uncomment and configure these lines if needed
+        # Se necessario, puoi scommentare e configurare le seguenti righe
         # with:
-        #   path: . # The root location of your Astro project inside the repository.
-        #   node-version: 16 # Specific Node version (defaults to 16).
-        #   package-manager: yarn # The package manager (defaults based on lockfile).
-      
+        #   path: . # La posizione principale del progetto Astro all'interno del repository.
+        #   node-version: 16 # La versione specifica di Node (predefinita a 16).
+        #   package-manager: yarn # Il package manager (predefinito in base al lockfile).
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4 # Aggiornato a v4
+        with:
+          name: your-artifact-name
+          path: your-file-path
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -31,6 +36,6 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Deploy to GitHub Pages
+      - name: Deploy su GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1 # Make sure to check for the latest version of this action.
+        uses: actions/deploy-pages@v1
